# anagma

./: .gitignore  Cargo.toml  LICENSE
src/: compose.rs  error.rs  lib.rs  library.rs  source.rs  sourcer.rs  test_util.rs  util.rs
src/config/: agg_method.rs  format.rs  inherit_method.rs  meta_format.rs  mod.rs  serialize_format.rs  sort_order.rs
src/config/fallback_method/: collect.rs  inherit.rs  iter.rs  mod.rs  util.rs
src/config/selection/: matcher.rs  mod.rs  selector.rs
src/config/serialize_format/: json.rs  mod.rs  yaml.rs
src/config/sorter/: mod.rs  sort_by.rs  sort_order.rs
src/functions/: expr.rs  expression.rs  mod.rs  op.rs  operand.rs  operator.rs  util.rs
src/functions/expr/: arg.rs  op.rs  thunk.rs
src/functions/op/: operand.rs  operator.rs
src/functions/operator/: binary.rs  unary.rs
src/functions/util/: iterable_like.rs  number_like.rs  stream_adaptor.rs  value_producer.rs
src/metadata/: aggregator.rs  block.rs  block_producer.rs  compositor.rs  finalizer.rs  location.rs  mod.rs  new_schema.rs  plexer.rs  processor.rs  resolver.rs  schema.rs  structure.rs  target.rs  types.rs  value.rs
src/metadata/consumer/: iterable_like.rs  mod.rs  number_like.rs  operand.rs  operand_stack.rs  ops.rs  streams.rs
src/metadata/producer/: block.rs  field.rs  mod.rs  value.rs
src/metadata/reader/: json.rs  mod.rs  yaml.rs  yaml_serde.rs
src/metadata/resolver/: context.rs  iterable_like.rs  mod.rs  number_like.rs  ops.rs  predicate.rs  streams.rs
src/metadata/stream/: block.rs  mod.rs  value.rs
src/metadata/streams/: block.rs  mod.rs  value.rs
src/metadata/types/: key.rs  mod.rs  repr.rs  val.rs
src/new_scripting/: generic_iterable.rs  mod.rs  operator_impl.rs  operators.rs  token.rs
src/scripting/: expr.rs  mod.rs  token.rs  util.rs
src/scripting/expr/: arg.rs  op.rs  (+1 more)
src/sources/: mod.rs  source.rs
src/test_util/: entry.rs  mod.rs
src/types/: block.rs  block_map.rs  block_seq.rs  mod.rs  number.rs  value.rs
src/updated_scripting/: arg.rs  mod.rs  traits.rs
src/util/: file_walker.rs  file_walkers.rs  mod.rs  number.rs  ooms.rs
(+48 files in other folders)
