[package]
name = "anagma"
version = "0.1.3"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"
description = "A new standard for storing hierarchical metadata for data/media files in external configuration files."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1"
serde_yaml = "0.8"
globset = "0.4"
rust_decimal = { version = "1", features = ["serde-float"] }
strum = { version = "0.19", features = ["derive"] }
indexmap = { version = "1", features = ["serde-1"] }
thiserror = "1"

[dev-dependencies]
maplit = "1"
tempfile = "3"
rand = "0.7"
rust_decimal_macros = "1"
str-macro = "0.1"
