[package]
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
description = "A new standard for storing hierarchical metadata for data/media files in external configuration files."
edition = "2021"
license = "MIT"
name = "anagma"
version = "0.2.0"

[dependencies]
globset = "0.4"
indexmap = {version = "1", features = ["serde-1"]}
rust_decimal = {version = "1", features = ["serde-float"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
strum = {version = "0.20", features = ["derive"]}
thiserror = "1"
toml = "0.5"

[dev-dependencies]
maplit = "1"
rand = "0.7"
rust_decimal_macros = "1"
str-macro = "0.1"
tempfile = "3"
